# MIC-1

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
src/: alu.rs  asm.rs  bus.rs  compiler.rs  decoders.rs  elements.rs  main.rs  main_memory.rs  memory.rs  microasm.rs  parser.rs  processor.rs  processor_elements.rs  shifter.rs
