[package]
name = "MIC-1"
version = "0.1.0"
authors = ["Alex Plate <aleksei.plate@jetbrains.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"
hex = "0.4.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tree-sitter = "0.16.1"

[build-dependencies]
cc = "1.0.58"